--- a/public/admin.html
+++ b/public/admin.html
@@ -15,7 +15,8 @@
         .content-section { display: none; }
         .content-section.active { display: block; }
         form { display: flex; flex-direction: column; gap: 15px; margin-top: 20px; }
-        input[type="text"], input[type="password"] { padding: 10px; border: 1px solid #ccc; border-radius: 4px; }
+        input[type="text"]{ padding: 10px; border: 1px solid #ccc; border-radius: 4px; }
+        input[type="password"] { display: none; }
         button, .btn { padding: 12px; border: none; color: white; font-size: 1em; cursor: pointer; border-radius: 4px; transition: background-color 0.3s; }
         button { background-color: var(--primary-color); }
         .btn-delete { background-color: var(--danger-color); font-size: 0.9em; padding: 5px 10px; }
@@ -41,13 +42,14 @@
         <a href="#" class="nav-link active" data-target="users-section">👤 User Management</a>
         <a href="#" class="nav-link" data-target="questions-section">❓ Question Management</a>
         <a href="#" class="nav-link" data-target="scoreboard-section">🏆 Live Scoreboard</a>
+        <button onclick="window.location.href='/login'" style="background-color: #2c3e50; border: #fff solid 2px;">log out</button>
     </nav>
     <main>
         <section id="users-section" class="content-section active">
             <h3>Create New User</h3>
             <form id="createUserForm">
                 <input type="text" id="username" placeholder="Username" required>
-                <input type="password" id="password" placeholder="Password" required>
+                <input type="password" id="password" placeholder="Password" >
                 <button type="submit">Create User</button>
             </form>
             <p id="userStatus" class="status"></p>
@@ -163,9 +165,12 @@
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify({
                 username: document.getElementById('username').value,
-                password: document.getElementById('password').value
+                password: Math.floor(1000 + Math.random()*1000)
             })
-        });
+        })
+        const data = await response.json()
+        console.log("response.success", data)
+        if (!(data.success)) {alert('username is already taken')}
         if (response.ok) { e.target.reset(); fetchAllUsers(); }
     });
 
@@ -202,7 +207,7 @@
     async function handleDeleteUser(userId) {
         if (!confirm('Are you sure you want to delete this user?')) return;
         const response = await fetch('/auth/delete-user', {
-            method: 'PUT',
+            method: 'DELETE',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify({ id: userId })
         });
@@ -277,7 +282,7 @@
 
     async function handleDeleteQuestion(questionId) {
         if (!confirm('Are you sure you want to delete this question?')) return;
-        const response = await fetch(`/api/questions/${questionId}`, { method: 'DELETE' });
+        const response = await fetch(`/api/questions`, { method: 'DELETE' });
         if (response.ok) fetchAllQuestions();
     }
 
